# web-SF-AX-support

./: .gitignore  CLAUDE.md  README.md  SPRINT3_README.md
.claude/: DEV_LOG.md  settings.json  settings.local.json
backend/: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  SPRINT3_IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml
backend/docker/: Dockerfile.dev
backend/scripts/: generate_password_hash.py  init_data.sql  init_schema.sql
backend/src/: config.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 20260110_0424_db81ce5e3704_add_application_company_matching_tables.py  20260110_0500_add_expert_scores.py  20260110_0530_add_reports.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: admin.py  api.py  applications.py  auth.py  companies.py  evaluation.py  experts.py  matchings.py  questions.py  reports.py
backend/src/app/core/: captcha.py  rate_limiter.py  security.py
backend/src/app/db/: base.py  session.py
backend/src/app/ml/: __init__.py  similarity.py
backend/src/app/models/: __init__.py  answer.py  application.py  company.py  expert.py  expert_score.py  matching.py  question.py  report.py  user.py
backend/src/app/schemas/: answer.py  application.py  company.py  expert.py  matching.py  question.py  report.py  score.py  user.py
backend/src/app/services/: email_service.py  grading_service.py  matching_service.py  pdf_service.py  question_service.py
backend/tests/: conftest.py  test_evaluation_api.py  test_grading_service.py  test_qualification.py  test_question_service.py  test_questions_api.py
docker/: docker-compose.yml
(+84 files in other folders)
